--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"ethers": "^6.11.0",
 		"express": "^4.18.2",
 		"nodemon": "^3.0.3",
-		"rimraf": "^5.0.5"
+		"rimraf": "^5.0.5",
+		"typescript": "^5.3.3"
 	},
 	"devDependencies": {
 		"@types/node": "^20.11.17"
